<resources>
    <string name="app_name">SeFitness</string>

    <!-- GENERAL -->
    <string name="logo">Logo</string>
    <!-- LOGIN -->
    <string name="login_correo">Correo</string>
    <string name="login_contrasenya">Contraseña</string>
    <string name="login_recuperar_contrasenya">Recuperar contraseña</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="login_contrasenya_test">Contraseña: 123456</string>
    <string name="login_aceptar">Aceptar</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="gasto_calorico_ejemplo_1">
        Cantidad de calorías recomendadas para lograr tus objetivos: 2145 kcal
    </string>

    <string name="gasto_calorico_ejemplo_2">
        Tu metabolismo basal: 1559 kcal
    </string>

    <string name="gasto_calorico_ejemplo_3">
        Tu nivel de actividad física: 836 kcal
    </string>

    <string-array name="genres">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="objetivos_entrenamiento">
        <item>Ganar masa muscular</item>
        <item>Definición muscular</item>
        <item>Pérdida de peso</item>
        <item>Mantener el peso</item>
    </string-array>
    <string-array name="dias_semana">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>