<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarContrasenyaActivity">
    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/blue_primary"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputLayout
                app:hintTextColor="@color/white"
                app:placeholderTextColor="@color/white"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorTextAppearance="@style/error_appearance"
                android:id="@+id/tilCorreo">

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/login_correo"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ingresar"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_aceptar"
                android:layout_marginVertical="15dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray_secondary"/>

            <TextView
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_contrasenya_test"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>