<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:src="@drawable/logotipo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/login_ingresar"
        android:layout_marginVertical="50dp"/>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/blue_primary"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                card_view:errorTextAppearance="@style/error_appearance"
                card_view:placeholderTextColor="@color/white"
                card_view:hintTextColor="@color/white"
                android:id="@+id/tilEmail">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_correo"
                    android:hint="@string/login_correo"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                card_view:hintTextColor="@color/white"
                card_view:placeholderTextColor="@color/white"
                android:layout_margin="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                card_view:errorTextAppearance="@style/error_appearance"
                android:id="@+id/tilContrasenya">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_contrasenya"
                    android:hint="@string/login_contrasenya"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_recuperar_contrasenya"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/blue_primary"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/login_recuperar_contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_registro"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/blue_primary"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:text="¿No tienes una cuenta? Registrate aquí"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_mandar"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_ingresar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gray_secondary"/>

</LinearLayout>